# xeval

./: .gitignore  README.md  flake.nix  hie.yaml  xeval.cabal  xeval.nix
app/: Errors.hs  Expr.hs  Logging.hs  Main.hs  X11Atoms.hs  X11Event.hs  X11Property.hs  X11Selection.hs
